Fixed text alignment issue in textarea for desktop version

--- a/styless.css
+++ b/styless.css
@@ -239,10 +239,13 @@ h2 {
   }
 
   #textInput {
-    padding: 54px 443px;
+    padding: 20px;
     display: block;
     text-align: left;
     vertical-align: top;
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
   }
 
   textarea {
